# CPEN400Q-Final-Project

./: .flake8  Dockerfile  README.md  plots.py  prototype.ipynb  pyproject.toml
demo/: demo.ipynb  grey_scale_bar_dataset.ipynb  helpers.py  quantumgan.py  talk-demo-with-index.ipynb  talk-demo.ipynb
quantumgan/: README.md  batch.py  classical.py  datasets.py  devices.py  gan.py  ideal_device.py  mpqc.py  pyproject.toml  train.py
report/: .gitignore  Makefile  README.md  cpen400q.bib  macros.tex  presentation.tex  report-requirements.tex  report.tex
report/presentation/: background.tex  math.tex  overview.tex  quantum-gans.tex
report/report/: framework.tex  introduction.tex  reproducibility.tex  results.tex  theory.tex
scripts/: figures.py  figures_index.py  figures_index_1.py  plots.py
