[tool.poetry]
name = "quantumgan"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pennylane = "^0.29.1"
pennylane-qiskit = "^0.29.0"
jax = "^0.4.8"
jaxlib = "^0.4.7"
jaxtyping = "^0.2.14"
matplotlib = "^3.7.1"
equinox = "^0.10.2"
optax = "^0.1.4"
tqdm = "^4.65.0"
qiskit-aer = "^0.12.0"
seaborn = "^0.12.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.6.3"
black = "^23.3.0"
pytype = "^2023.4.11"
flake8 = "^6.0.0"

[tool.black]
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
